--- a/amazonWeb/users/templates/users/profile.html
+++ b/amazonWeb/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "amazon/base.html" %}
 {% block content %}
     <h2>{{ user.username }}</h2>
 {% endblock content %}
