--- a/amazonWeb/orders/templates/order/orders.html
+++ b/amazonWeb/orders/templates/order/orders.html
@@ -1,20 +1,14 @@
-{% extends "users/base.html" %}
+{% extends "amazon/base.html" %}
 {% block content %}
 
 <div class="container">
 
-    <div class="accordion" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                    aria-controls="panelsStayOpen-collapseOne">
-                    All your confirmed orders:
-                </button>
+    <div class="orderView">
+        <div class="orderView-product">
+            <h2>
+                All your confirmed orders:
             </h2>
-            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
-                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
+            <div class"orderView body">
                     <table class="table table-striped table-hover table-responsive">
                         <!-- tr表示每一行， td表示每一个元素 -->
                         <thead>
@@ -23,8 +17,13 @@
                                 <!-- th相当于是列表的头，告知这一列是什么元素 -->
                                 <th>Order ID</th>
                                 <th>User Name</th>
-                                <th>Item Name</th>
-                                <th>Amount</th>
+                                <th>Address</th>
+                                <th>Package Status</th>
+                                <th>Product ID</th>
+                                <th>Product Description</th>
+                                <th>Quantity</th>
+                                <th>Price</th>
+                                <th>UPS ID</th>
                             </tr>
                         </thead>
 
@@ -34,22 +33,22 @@
                                 <!-- td表示每一行里面的元素 -->
                                 <td>{{ order.id}}</td>
                                 <td>{{ order.owner.username}}</td>
-                                <td>{{ order.item.description}}</td>
-                                <td>{{ order.item_cnt}}</td>
+                                <td>{{ order.addr_x}} {{order.addr_y}}</td>
+                                <td>{{ order.status}}</td>
+                                <td>{{ order.product.id}}</td>
+                                <td>{{ order.product.description}}</td>
+                                <td>{{ order.product_cnt}}</td>
+                                <td>{{ order.price}}</td>
+                                <td>{{ order.ups_id}}</td>
 
                             </tr>
                             {% endfor %}
                         </tbody>
 
                     </table>
-                </div>
             </div>
         </div>
     </div>
 
-    <br>
-    <a href="{% url 'home' %}"><button>return</button>
-    </a>
-    <br>
 </div>
 {% endblock content %}
