--- a/amazonWeb/users/templates/users/base.html
+++ b/amazonWeb/users/templates/users/base.html
@@ -20,7 +20,7 @@
     <!-- initial a navigation bar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'home' %}">mini Amazon</a>
+            <a class="navbar-brand mr-4" href="{% url 'product_list' %}">mini Amazon</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
                 <!-- use mr-auto to push all other elements to the right side -->
                 <ul class="navbar-nav mr-auto">
                     <li>
-                        <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'product_list' %}">Home</a>
                     </li>
                 </ul>
 
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-item nav-link" href="{% url 'shop_cart' %}">
+                            <a class="nav-item nav-link" href="{% url 'cart:cart_detail' %}">
                                 <i class="fa fa-shopping-cart"></i>
                             </a>
                         </li>
@@ -48,18 +48,18 @@
                                 Option
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'viewOrder' %}">Your Order</a>
-                                <a class="dropdown-item" href="{% url 'profile' %}">User Profile</a>
+                                <a class="dropdown-item" href="{% url 'orders:view' %}">Your Order</a>
+                                <a class="dropdown-item" href="{% url 'users:profile' %}">User Profile</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                                <a class="dropdown-item" href="{% url 'users:logout' %}">Log out</a>
                             </div>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-item nav-link" href="{% url 'login' %}">Log in</a>
+                            <a class="nav-item nav-link" href="{% url 'users:login' %}">Log in</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                            <a class="nav-item nav-link" href="{% url 'users:register' %}">Register</a>
                         </li>
                     {% endif %}
                 </ul>
