--- a/amazonWeb/users/templates/users/home.html
+++ b/amazonWeb/users/templates/users/home.html
@@ -1,4 +1,4 @@
-{% extends "users/base.html" %}
+{% extends "amazon/base.html" %}
 {% block content %}
     <h1>Hello world</h1>
     {% if profiles %}
@@ -12,13 +12,13 @@
         <h2>No user yet.</h2>
     {% endif %}
     {% if user.is_authenticated %}
-    <a href="{% url "logout" %}">Logout</a>
+    <a href="{% url "users:logout" %}">Logout</a>
     <br>
-    <a href="{% url "profile" %}">Profile</a>
+    <a href="{% url "users:profile" %}">Profile</a>
 {% else %}
-    <a href="{% url "register" %}">Register</a>
+    <a href="{% url "users:register" %}">Register</a>
     <br>
-    <a href="{% url "login" %}">Login</a>
+    <a href="{% url "users:login" %}">Login</a>
 {% endif %}
 
 {% endblock %}
