--- a/amazonWeb/cart/templates/cart/detail.html
+++ b/amazonWeb/cart/templates/cart/detail.html
@@ -51,8 +51,14 @@
   </table>
   <p class="text-right">
     <a href="{% url "product_list" %}" class="button light">Continue shopping</a>
+    {% if user.is_authenticated %}
     <a href="{% url "orders:order_create" %}" class="button">
       Checkout
     </a>
+      {%else%}
+      <a href="{% url "users:login" %}" class="button">
+        Checkout
+      </a>
+    {%endif%}   
   </p>
 {% endblock %}
