--- a/amazonWeb/orders/templates/order/orders.html
+++ b/amazonWeb/orders/templates/order/orders.html
@@ -10,7 +10,6 @@
             </h2>
             <div class"orderView body">
                     <table class="table table-striped table-hover table-responsive">
-                        <!-- tr表示每一行， td表示每一个元素 -->
                         <thead>
                             <tr>
                                 <!-- tr表示table row， 指一行 -->
@@ -30,20 +29,28 @@
                         <tbody>
                             {% for order in order_list %}
                             <tr>
-                                <!-- td表示每一行里面的元素 -->
-                                <td>{{ order.id}}</td>
-                                <td>{{ order.owner.username}}</td>
-                                <td>{{ order.addr_x}} {{order.addr_y}}</td>
-                                <td>{{ order.status}}</td>
-                                <td>{{ order.product.id}}</td>
-                                <td>{{ order.product.description}}</td>
-                                <td>{{ order.product_cnt}}</td>
-                                <td>{{ order.price}}</td>
-                                <td>{{ order.ups_id}}</td>
-
+                                <td>{{ order.id }}</td>
+                                <td>{{ order.owner.username }}</td>
+                                <td>{{ order.addr_x }}, {{ order.addr_y }}</td>
+                                <td>{{ order.status }}</td>
+                                    <td>{% for item in order.items.all %}
+                                        [{{ item.product.id }}]
+                                        {%endfor%}
+                                    </td>
+                                    <td>{% for item in order.items.all %}
+                                        [{{ item.product.name}}]   
+                                        {%endfor%}
+                                    </td>
+                                    <td>{% for item in order.items.all %}
+                                        [{{ item.quantity }}]  
+                                        {%endfor%}
+                                    </td>
+                                <td>{{ order.price }}</td>
+                                <td>{{ order.ups_id }}</td>
                             </tr>
                             {% endfor %}
-                        </tbody>
+                            </tbody>
+                            
 
                     </table>
             </div>
