--- a/docker-deploy/amazonWeb/cart/templates/cart/detail.html
+++ b/docker-deploy/amazonWeb/cart/templates/cart/detail.html
@@ -37,8 +37,8 @@
               </form>
             </td>
             <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
-            <td class="num">${{ item.price }}</td>
-            <td class="num">${{ item.total_price }}</td>
+            <td>${{ item.price }}</td>
+            <td>${{ item.total_price }}</td>
           </tr>
         {% endwith %}
       {% endfor %}
